<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Accounts Flow</string>
    <string name="app_name_demo">Accounts Flow Demo</string>
    <string name="hello_world">List of suppliers goes here</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Sign out</string>
    <string name="menu_search">Search</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_add_order">Add order</string>
    <string name="menu_add_product">Add Product</string>
    <string name="tab_suppliers">Suppliers</string>
    <string name="tab_orders">Saved Orders</string>
    <string name="empty_orders">You have no pending or saved order</string>
    <string name="error_logout">Unable to sign out</string>
    <string name="error_list_businesses">Unable to fetch list of businesses</string>
    <string name="error_fetch_logos">Unable to fetch business logos</string>
    <string name="error_list_products">Unable to fetch list of products</string>
    <string name="error_list_prices">Unable to fetch list of product prices</string>
    <string name="error_list_specials">Unable to fetch list of specials</string>
    <string name="error_list_discounts">Unable to fetch list of discounts</string>
    <string name="error_submit_order">Unable to submit order. Please try again.</string>
    <string name="error_save_basket">Unable to save basket. Please try again.</string>
    <string name="error_ordered_before">Unable to fetch ordered before list. Please try again.</string>
    <string name="error_saved_orders">Unable to fetch saved orders list. Please try again.</string>
    <string name="error_delete_basket">Unable to delete saved order. Please try again.</string>
    <string name="submit_order_successful">Order sent successfully</string>
    <string name="save_basket_successful">Basket has been saved successfully</string>
    <string name="delete_basket_successful">Saved order has been deleted</string>
    <string name="title_activity_suppliers">Suppliers</string>
    <string name="title_activity_retailers">Retailers</string>
    <string name="title_product_list">Product List</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="title_product_promotions">Promotions</string>
    <string name="title_product_specials">Specials</string>
    <string name="title_product_qda">QDA Search</string>
    <string name="title_focus_brand">Focus Brands</string>
    <string name="title_ordered_before">Ordered Before</string>
    <string name="title_saved_order_items">Saved Order Items</string>
    <string name="search_suppliers">Search suppliers</string>
    <string name="search_product_list">Search by code or name</string>
    <string name="search_special">Search by code or name</string>
    <string name="search_qda">Search by code or name</string>
    <string name="search_focus_brand">Search by code or name</string>
    <string name="search_promotion">Search by code or name</string>
    <string name="search_ordered_before">Search by code or name</string>
    <string name="search_saved_order">Search saved orders</string>
    <string name="loading_images">Loading images&#8230;</string>
    <string name="empty_suppliers">No supplier found</string>
    <string name="empty_products">No product found</string>
    <string name="empty_focus_brands">No focus brand</string>
    <string name="empty_specials">No special found</string>
    <string name="empty_qda">No QDA found</string>
    <string name="empty_promotions">No promotion found</string>
    <string name="empty_ordered_before">No ordered before found</string>
    <string name="empty_current_order">No item in the basket</string>
    <string name="empty_saved_order_items">No item in the saved order</string>
    <string name="search_fragment_title">Search Results</string>
    <string name="product_code_title">PRODUCT CODE</string>
    <string name="unit_size_title">UNIT SIZE</string>
    <string name="unit_type_title">UNIT TYPE</string>
    <string name="pack_type_title">PACK TYPE</string>
    <string name="unit_per_case_title">UNIT PER CASE</string>
    <string name="product_price_title">WHOLESALE PRICE (WITH TAX)</string>
    <string name="product_split_price_title">WHOLESALE SPLIT PRICE (WITH TAX)</string>
    <string name="product_tax_title">TAX</string>
    <string name="product_freight_title">FREIGHT PER CASE</string>
    <string name="is_splittable_title">SPLITTABLE</string>
    <string name="cases_uppercase_title">CASES</string>
    <string name="units_uppercase_title">UNITS</string>
    <string name="wholesale_uppercase_title">WHOLESALE</string>
    <string name="tax_rate_uppercase_title">TAX RATE</string>
    <string name="bonus_cases_uppercase_title">BONUS CASES</string>
    <string name="bonus_units_uppercase_title">BONUS UNITS</string>
    <string name="case_discounts_uppercase_title">CASE DISCOUNTS</string>
    <string name="cost_uppercase_title">COST</string>
    <string name="currency_symbol">$</string>
    <string name="order_dialog_title">Add order item</string>
    <string name="order_edit_title">Edit order item</string>
	<string name="order_dialog_add">Add</string>
	<string name="order_dialog_edit">Edit</string>
	<string name="order_dialog_cancel">Cancel</string>
	<string name="order_case_radio_title">Cases</string>
	<string name="order_unit_radio_title">Units</string>
	<string name="order_quantity_title">Quantity</string>
	<string name="order_code_title">Code</string>
	<string name="order_type_title">Type</string>
	<string name="order_add_item_successful">Item added successfully</string>
	<string name="order_edit_item_successful">Order updated successfully</string>
	<string name="order_add_item_no_code">Please specify the item code</string>
	<string name="order_add_item_no_quantity">Please specify number of items to order</string>
	<string name="order_add_item_invalid_code">Invalid item code</string>
	<string name="order_add_item_failed">Unable to add item to the order list. Please try again.</string>
	<string name="order_edit_item_failed">Unable to edit order item. Please try again.</string>
	<string name="progress_order_text">Progress order</string>
	<string name="current_order_title">Current Order</string>
	<string name="order_total_label">Total</string>
	<string name="freight_row_title">Freight cost</string>
	<string name="wholesale_price_title">Price: </string>
	<string name="wholesale_split_price_title">Split price: </string>
	<string name="order_name_title">Order Name: </string>
	<string name="order_notes_title">Order Notes: </string>
	<string name="save_order_title">Save Order </string>
	<string name="submit_order_title">Submit Order </string>
	<string name="progress_order_note">Prices indicated are not final and serve only as an approximation</string>
	<string name="date_sent_text">Date sent: </string>
	<string name="empty_order_history">No order history found</string>
	<string name="error_order_history">Unable to fetch order history</string>
	<string name="title_order_history">Order History </string>
	<string name="title_order_history_details">Order Item Details</string>
	<string name="empty_order_history_items">No order history items found</string>
	<string name="order_cases_title">Cases:</string>
	<string name="order_units_title">Units:</string>
	<string name="order_total_title">Total:</string>
	<string name="base_title">Base:</string>
	<string name="promo_title">Promo:</string>
	<string name="special_title">Specials:</string>
	<string name="quick_order_title">Quick Order</string>
	<string name="qda_title">QDA:</string>
	<string name="code_title">Code:</string>
	<string name="size_title">Size:</string>
	<string name="quantity_short_title">Qty:</string>
	<string name="minimum_cases_title">Min cases</string>
	<string name="qda_price_title">Price</string>
	<string name="submit_order_progress">Submitting order&#8230;</string>
	<string name="saving_basket_progress">Saving basket&#8230;</string>
	<string name="edit_title">Edit</string>
	<string name="delete_title">Delete</string>
	<string name="smart_order_title">Enjoy greater savings!</string>
	<string name="smart_order_apply">Apply</string>
	<string name="smart_order_cancel">No thanks</string>
	<string name="smart_order_description">Choose one of these great deals:</string>
	<string name="row_divider">" | "</string>
	<string name="submit_all_title">"Submit all"</string>	
	<string name="confirmation_title">Confirmation</string>
	<string name="alert_title">Alert</string>
	<string name="submit_all_dialog_message">Are you sure you want to submit ALL orders?</string>
	<string name="delete_saved_order_message">Delete saved order?</string>
	<string name="submit_all_dialog_ok">OK</string>
	<string name="submit_all_dialog_cancel">Cancel</string>
	<string name="delete_order_dialog_ok">OK</string>
	<string name="delete_order_dialog_cancel">Cancel</string>
	<string name="submit_all_no_basket">No order to sent</string>
	<string name="submit_all_fail">Failed to send some of the orders.</string>
	<string name="submit_all_retry_title">Retry send order</string>
	<string name="submit_all_retry_ok">Retry</string>
	<string name="submit_all_retry_cancel">Cancel</string>
	<string name="submit_all_retry">Would you like to retry sending these orders?</string>
	<string name="empty_basket_warning">No item to order</string>
	<string name="save_basket_reminder">There are some items in your basket. Would you like to save your basket?</string>
	<string name="save_basket_yes">Save basket</string>
	<string name="save_basket_no">No thanks</string>
</resources>