<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="6dip">
        
    <ImageView
        android:id="@+id/list_star"
        android:layout_width="@dimen/small_icon_width"
        android:layout_height="@dimen/small_icon_height"
        android:layout_marginTop="@dimen/star_top_margin"
        android:src="@drawable/ic_star"
        android:adjustViewBounds="false"
        android:visibility="gone" />
    
    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginRight="@dimen/text_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView  
            android:textSize="@dimen/product_desc_text_size"
            android:id="@+id/product_desc"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:ellipsize="end"
			android:maxLines="1"
			android:scrollHorizontally="true">
        </TextView>
        
        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/text_margin"
	        android:orientation="horizontal" >
	        <TextView
	            android:textSize="@dimen/product_price_text_size"
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content"
	            android:text="@string/code_title"
	            android:textColor="@color/af_grey"
	            android:ellipsize="end"
				android:maxLines="1"
				android:scrollHorizontally="true">
	        </TextView>
	        <TextView
	            android:textSize="@dimen/product_price_text_size"
	            android:id="@+id/product_code"
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="@dimen/text_margin"
	            android:textColor="@color/af_grey"
	            android:ellipsize="end"
				android:maxLines="1"
				android:scrollHorizontally="true">
	        </TextView>   
	        <TextView
	            android:textSize="@dimen/product_price_text_size"
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content"
	            android:text="@string/row_divider"
	            android:textColor="@color/af_grey"
	            android:ellipsize="end"
				android:maxLines="1"
				android:scrollHorizontally="true">
	        </TextView> 
	        <TextView
	            android:textSize="@dimen/product_price_text_size"
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content"
	            android:text="@string/base_title"
	            android:textColor="@color/af_grey"
	            android:ellipsize="end"
				android:maxLines="1"
				android:scrollHorizontally="true">
	        </TextView>
	        <TextView
	            android:textSize="@dimen/product_price_text_size"
	            android:id="@+id/product_price"
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="@dimen/text_margin"
	            android:textColor="@color/af_grey"
	            android:ellipsize="end"
				android:maxLines="1"
				android:scrollHorizontally="true">
	        </TextView> 
	        <TextView
	            android:textSize="@dimen/product_price_text_size"
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content"
	            android:text="@string/row_divider"
	            android:textColor="@color/af_grey"
	            android:ellipsize="end"
				android:maxLines="1"
				android:scrollHorizontally="true">
	        </TextView>    
	        <TextView
	            android:textSize="@dimen/product_price_text_size"
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content"
	            android:text="@string/promo_title"
	            android:textColor="@color/af_grey"
	            android:ellipsize="end"
				android:maxLines="1"
				android:scrollHorizontally="true">
	        </TextView>
	        <TextView
	            android:textSize="@dimen/product_price_text_size"
	            android:id="@+id/product_promo"
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="@dimen/text_margin"
	            android:textColor="@color/af_grey"
	            android:ellipsize="end"
				android:maxLines="1"
				android:scrollHorizontally="true">
	        </TextView> 
	        <TextView
	            android:textSize="@dimen/product_price_text_size"
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content"
	            android:text="@string/row_divider"
	            android:textColor="@color/af_grey"
	            android:ellipsize="end"
				android:maxLines="1"
				android:scrollHorizontally="true">
	        </TextView> 
	        <TextView
	            android:textSize="@dimen/product_price_text_size"
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content"
	            android:text="@string/size_title"
	            android:textColor="@color/af_grey"
	            android:ellipsize="end"
				android:maxLines="1"
				android:scrollHorizontally="true">
	        </TextView>
	        <TextView
	            android:textSize="@dimen/product_price_text_size"
	            android:id="@+id/product_size"
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="@dimen/text_margin"
	            android:textColor="@color/af_grey"
	            android:ellipsize="end"
				android:maxLines="1"
				android:scrollHorizontally="true">
	        </TextView>      
        </LinearLayout>
    </LinearLayout>
</LinearLayout>